--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-<form action="https://qvls5frwcc.execute-api.ap-south-1.amazonaws.com/V1/UploadLink_Anamay" method="post" enctype="multipart/form-data">
+<form action=" https://siehe3sl94.execute-api.ap-south-1.amazonaws.com/v1/upload" method="post" enctype="multipart/form-data">
     <h1>BBIL Production Department - Data Upload Interface</h1>
     <label>Select a CSV file to upload:</label>
     <input type="file" name="file" accept=".csv">
